# workshop-agentes

./: README.md
enrollment-assistant/: README.md  pyproject.toml  report.md
enrollment-assistant/knowledge/: disciplinas_optativas.csv  fluxograma.json
enrollment-assistant/src/enrollment_assistant/: crew.py  main.py
enrollment-assistant/src/enrollment_assistant/config/: agents.yaml  tasks.yaml
enrollment-assistant/src/enrollment_assistant/tools/: custom_tool.py
