[project]
name = "enrollment_assistant"
version = "0.1.0"
description = "enrollment-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-generativeai>=0.1",
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
enrollment_assistant = "enrollment_assistant.main:run"
run_crew = "enrollment_assistant.main:run"
train = "enrollment_assistant.main:train"
replay = "enrollment_assistant.main:replay"
test = "enrollment_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
